# state_estimation_for_pln

./: .gitignore  COMPLETENESS_REPORT.md  README.md  pyproject.toml  requirements.txt
examples/: generate_cim_iec61850.py  generate_ieee14.py
examples/cim/: network_EQ.xml  network_TP.xml
examples/csv/: buses.csv  element_mapping.csv  ext_grids.csv  lines.csv  measurements.csv  switches.csv  transformers.csv
examples/iec61850/: measurements_IEC61850.xml
examples/ieee14/: buses.csv  ext_grids.csv  lines.csv  measurements.csv  transformers.csv
examples/ieee57/: buses.csv  ext_grids.csv  lines.csv  measurements.csv  transformers.csv
examples/xml/: network.xml
src/state_estimation/: __init__.py  main.py
src/state_estimation/cim/: __init__.py  adapter.py  model.py  namespaces.py  parser.py  serializer.py
src/state_estimation/cim/profiles/: __init__.py  eq.py  ssh.py  sv.py  tp.py
src/state_estimation/estimator/: __init__.py  wls_estimator.py
src/state_estimation/network/: __init__.py  builder.py
src/state_estimation/parsers/: __init__.py  base_parser.py  csv_parser.py  scada_parser.py  xml_parser.py
src/state_estimation/reports/: report_generator.py
src/state_estimation/topology/: __init__.py  island.py  processor.py
src/state_estimation/validation/: __init__.py  observability.py  shacl.py
src/state_estimation/validation/rules/: cim_shapes.ttl
tests/: test_se.py
